--- a/geog458lab2crawler.ipynb
+++ b/geog458lab2crawler.ipynb
@@ -129,10 +129,10 @@
         "    output_file = '/gdrive/My Drive/geotweets3.csv'\n",
         "\n",
         "    # Apply for your own Twitter API keys at https://developer.twitter.com/en/apply-for-access\n",
-        "    consumer_key = \"zv7uwCjVmJpYMtPgUmXC5dZPa\"\n",
-        "    consumer_secret = \"ZVK8XYIAG4yI15Sbl4tL2SNYrKmEAvTMyj0OWvm1myI1n6yizA\"\n",
-        "    access_token = \"1517271973868437506-iHXdg3cpAV6l9qSfu79pcasEVrMwa7\"\n",
-        "    access_token_secret = \"7b4t3VBJX4HnUhTrJhD4EyInvatoVwxJamhIr1OPzEvJN\"\n",
+        "    consumer_key = \"\"\n",
+        "    consumer_secret = \"\"\n",
+        "    access_token = \"\"\n",
+        "    access_token_secret = \"\"\n",
         "\n",
         "    myauth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
         "    myauth.set_access_token(access_token, access_token_secret)\n",
